# rekcod

./: .gitignore  Cargo.toml  Cross.toml  README.md  db.sqlite  justfile
rekcod/: Cargo.toml
rekcod-agent/: Cargo.toml
rekcod-agent/src/: agent.rs  config.rs  lib.rs  register.rs  sys.rs
rekcod-agent/src/docker/: mod.rs  unix.rs  win.rs
rekcod-agent/src/job/: container.rs  events.rs  mod.rs  register.rs  sys.rs
rekcod-core/: Cargo.toml
rekcod-core/src/: application.rs  auth.rs  client.rs  config.rs  constants.rs  docker.rs  http.rs  lib.rs  obj.rs  utils.rs
rekcod-core/src/api/: req.rs  resp.rs
rekcod-dashboard/: Cargo.toml
rekcod-dashboard/app/: .prettierrc.json  package-lock.json  package.json  vite.config.js
rekcod-dashboard/app/src/api/: index.js
rekcod-dashboard/app/src/components/common/: XtermCmd.vue
rekcod-dashboard/app/src/components/docker/: DockerContainerList.vue  DockerContainers.vue  DockerImages.vue  DockerInfo.vue  DockerNetworks.vue  DockerVolumes.vue
rekcod-dashboard/app/src/layout/: BaseLayout.vue
rekcod-dashboard/app/src/router/: index.js
rekcod-dashboard/app/src/views/: ApplicationDeployView.vue  ApplicationTemplateView.vue  ApplicationView.vue  DockerView.vue  EnvironmentView.vue  NodeManagerView.vue
rekcod-dashboard/src/: lib.rs
rekcod-server/: Cargo.toml
rekcod-server/migrations/: 20241010_init.sql  20241111_update.sql
rekcod-server/src/: config.rs  lib.rs  node.rs  server.rs
rekcod-server/src/api/: app.rs  application.rs  docker.rs  env.rs  mod.rs  node.rs  node_proxy.rs  socketio.rs
rekcod-server/src/api/app/: docker.rs  mod.rs
rekcod-server/src/app/: engine.rs  manager.rs  mod.rs  watch.rs
rekcod-server/src/db/: kvs.rs  mod.rs
rekcod-server/src/env/: mod.rs
rekcod-server/src/node/: manager.rs  monitor.rs
rekcod/src/: api.rs  config.rs  docker.rs  docker_compose.rs  main.rs  node.rs
rekcodd/: Cargo.toml
rekcodd/src/: api.rs  config.rs  main.rs
resource/: docker-compose.yaml
resource/data/app/test1/: application.yaml
resource/data/app/test1/template/: docker-compose.yaml  docker-compose.yaml.j2
resource/data/app/test2/: application.yaml
resource/data/app/test2/project/: Dockerfile  Readme.md  docker-compose.yaml
resource/data/app/test2/template/: docker-compose.yaml.j2
resource/rest/: rekcodd_server.rest
scripts/: install.sh
