[workspace]
members = ["rekcod-core", "rekcod-server", "rekcod-agent", "rekcod"]
resolver = "2"


[workspace.dependencies]
tokio = "1"
tokio-util = "0.7"
clap = "4"
axum = "0.7"
anyhow = "1"
hyperlocal = "0.9"
#bollard = "0.17"
bollard = { git = "https://github.com/BenLocal/bollard.git" }
hyper-util = "0.1"
hyper = "1"
hyper-named-pipe = "0.1"
async-trait = "0.1"
hex = "0.4"
once_cell = "1.8"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2.2"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
serde_urlencoded = "0.7.1"
serde_with = "3.4.0"
serde_repr = "0.1.17"
reqwest = "0.11"
sqlx = "0.8"
