[workspace]
members = [
    "rekcod-core",
    "rekcod-server",
    "rekcod-agent",
    "rekcodd",
    "rekcod",
    "rekcod-dashboard",
]
resolver = "2"


[workspace.dependencies]
tokio = "1"
tokio-util = "0.7"
clap = "4"
axum = "0.7"
anyhow = "1"
hyperlocal = "0.9"
#bollard = "0.17"
bollard = { git = "https://github.com/BenLocal/bollard.git" }
hyper-util = "0.1"
hyper = "1"
hyper-named-pipe = "0.1"
async-trait = "0.1"
hex = "0.4"
once_cell = "1.8"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2.2"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
serde_urlencoded = "0.7.1"
serde_with = "3.4.0"
serde_repr = "0.1.17"
reqwest = "0.12"
sqlx = "0.8"
rust-embed = "8"
futures = "0.3"
futures-util = "0.3"
mime_guess = "2"
http-range = "0.1"
local-ip-address = "0.6"
sysinfo = "0.32"
uuid = "1"
tabled = "0.16"
json_to_table = "0.8"
axum-embed = "0.1"
socketioxide = "0.15"
url = "2"
tower-http = "0.6.1"
tower = "0.5"
pin-project-lite = "0.2.15"
http-body-util = "0.1"
base64 = "0.13"
which = "7"
minijinja = "2.4"
minijinja-autoreload = "2.3.1"
async-walkdir = "2"
notify = "7.0.0"
