[package]
name = "rekcod-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
rekcod-core = { path = "../rekcod-core" }
axum = { workspace = true }
tokio = { workspace = true, features = ["full"] }
hyper = { workspace = true, features = ["full"] }
hyper-util = { workspace = true, features = ["full"] }
hex = { workspace = true }
anyhow = { workspace = true }

[target.'cfg(unix)'.dependencies]
hyperlocal = { workspace = true }

[target.'cfg(windows)'.dependencies]
hyper-named-pipe = { workspace = true }
