[package]
name = "rekcod-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
rekcod-core = { path = "../rekcod-core" }
axum = { workspace = true, features = ["ws"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["full"] }
hyper = { workspace = true, features = ["full"] }
hyper-util = { workspace = true, features = ["full"] }
hex = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
mime_guess = { workspace = true }
http-range = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }
local-ip-address = { workspace = true }
sysinfo = { workspace = true }
pin-project-lite = { workspace = true }

[target.'cfg(unix)'.dependencies]
hyperlocal = { workspace = true }

[target.'cfg(windows)'.dependencies]
hyper-named-pipe = { workspace = true }
