[package]
name = "rekcod-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bollard = { workspace = true }
tokio = { workspace = true, features = ["full"] }
hyper = { workspace = true, features = ["full"] }
hyper-util = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
