[package]
name = "rekcod-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bollard = { workspace = true }
hyper = { workspace = true, features = ["full"] }
hyper-util = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
once_cell = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
tabled = { workspace = true }
base64 = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["full"] }
which = { workspace = true }
