[package]
name = "rekcod-server"
version = "0.1.0"
edition = "2021"

[dependencies]
rekcod-core = { path = "../rekcod-core" }
axum = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["full"] }
hyper = { workspace = true, features = ["full"] }
hyper-util = { workspace = true, features = ["full"] }
hex = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true, features = [
    "runtime-tokio-native-tls",
    "sqlite",
    "uuid",
    "time",
] }
once_cell = { workspace = true }
rust-embed = { workspace = true }
futures = { workspace = true }
bollard = { workspace = true }
