[package]
name = "rekcod-server"
version = "0.1.0"
edition = "2021"

[dependencies]
rekcod-core = { path = "../rekcod-core" }
rekcod-dashboard = { path = "../rekcod-dashboard" }
axum = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["full"] }
hyper = { workspace = true, features = ["full"] }
hyper-util = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true, features = [
    "runtime-tokio-rustls",
    "sqlite",
    "uuid",
    "time",
] }
once_cell = { workspace = true }
rust-embed = { workspace = true }
futures = { workspace = true }
bollard = { workspace = true }
uuid = { workspace = true, features = ["v4", "fast-rng", "macro-diagnostics"] }
socketioxide = { workspace = true }
url = { workspace = true }
tower-http = { workspace = true, features = ["cors", "fs", "trace"] }
tower = { workspace = true }
minijinja = { workspace = true, features = ["loader"] }
minijinja-autoreload = { workspace = true }
async-walkdir = { workspace = true }
serde_yaml = { workspace = true }
