[package]
name = "rekcodd"
version = "0.1.0"
edition = "2021"

[dependencies]
rekcod-core = { path = "../rekcod-core" }
rekcod-agent = { path = "../rekcod-agent" }
rekcod-server = { path = "../rekcod-server" }
axum = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["full"] }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tower-http = { workspace = true, features = ["cors", "fs", "trace"] }
tower = { workspace = true }
